LPS-68941 Fixed lack of scrollbars in RTL mode. https://dev.ckeditor.com/ticket/10448

--- a/contents.css
+++ b/contents.css
@@ -22,6 +22,9 @@ body
 {
 	font-size: 13px;
 	line-height: 1.6em;
+
+	/* 10488 fix for lack of scrollbars with RTL texts */
+	word-wrap: break-word;
 }
 
 blockquote
